--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/MariiaC",
+  "homepage": "https://github.com/MariiaC/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://mariiac.github.io/goit-js-hw-08.git"
+    "url": "git+https://github.com/MariiaC/goit-js-hw-08"
   },
   "keywords": [],
-  "author": "Mariia Chvorun <mariiachvorun@gmail.com>",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://mariiac.github.io/goit-js-hw-08/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.17.1",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
